<?xml version="1.0"?>
<package format="2">
  <name>sentry_chassis_controller</name>
  <version>0.0.0</version>
  <description>The sentry_chassis_controller package</description>
  <maintainer email="acermg@todo.todo">acermg</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 依赖项 -->
  <depend>roscpp</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>control_toolbox</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend> 
  <depend>controller_manager</depend>
  <depend>joint_state_controller</depend>
  <depend>simple_chassis_controller</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>

  <!-- 关键：导出插件 -->
  <export>
    <controller_interface plugin="${prefix}/chassis_controller_plugins.xml"/>
  </export>
</package>